Remove Instagram preview
We are no longer doing this in the backend.
